--- a/01_data_processing.ipynb
+++ b/01_data_processing.ipynb
@@ -3,6 +3,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pip install -r Requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "oO4m4Nt4qYOD"
       },
